...
    <string name="submit_form">Submit Form</string>
    <string name="inspect_school">Fill Forms</string>
    <string name="my_visits">My Submissions</string>
    <string name="on_internet_saving_complete" translatable="false">Data has been captured. SMS will be sent within 48 hours.</string>
    <string name="no_internet_saving_complete" translatable="false">Data has been captured. SMS will be sent after syncing with the internet. </string>
    <string name="server_2_base_url_local"  translatable="false">http://192.168.1.14:8080</string>
    <string name="change_app_language_title">Change Language</string>
    <string name="coming_soon">CLICK TO GO TO FAQs</string>
    <string name="welcome" translatable="true">WELCOME,\n</string>
    <string name="track_sms_delivery">Track SMS \nDelivery</string>
    <string name="fill_assessment_data">Fill Assessment \nData</string>
    <string name="support">Support</string>
    <string name="visit_status">Visit Status</string>
    <string name="submitted_forms">Submitted Forms</string>
    <string name="no_sms_to_track">No SMS has been sent so far, therefore, no tracking report available for your account.</string>
    <string name="about_us">About Us</string>
    <string name="tutorial">Tutorial</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="pta_meeting">PTA Meeting</string>
    <string name="success">Success</string>
    <string name="pending">Pending</string>
    <string name="failed">Failed</string>
    <string name="base_url_relay_server">http://142.93.208.135:8080</string>
    <string name="offline_text_1">It seems you are offline. Logout cannot happen in offline conditions.</string>
...
    <string name="downloading">Downloading data from Server</string>
    <string name="no_internet">Failed to get data. Please check your internet connection</string>
    <string name="server_error">Failed to get data. Please check your internet connection.</string>
    <string name="track_sms_title">Track SMS</string>
    <string name="please_update_the_password_and_details_of_the_school_in_charge">Please update the contact details in the Profile Section.</string>
    <string name="update_cancel_1">To update the language on the app, select the language and click on Update. Please restart the phone to update the language.</string>
    <string name="update">UPDATE</string>
    <string name="update_details">UPDATE DETAILS</string>
    <string name="cancel">Cancel</string>
    <string name="select_form">Select form</string>
    <string name="no_internet_retry">Please connect to internet and retry</string>
    <string name="retry">Retry</string>
    <string name="change_language">Change Language</string>
    <string name="hindi">हिंदी</string>
    <string name="settings">Settings</string>
    <string name="no_internet_45">Please connect to internet to update data.</string>
    <string name="gender">लिंग</string>
    <string name="category">वर्ग</string>
    <string name="download_complete">Download Complete</string>
    <string name="english">English</string>
    <string name="fill_forms">Fill Forms</string>
    <string name="about_us_summary" translatable="false">Saksham Samiksha application is a product of the Department of School Education, Haryana Government.  The application will be used to record observations of academic and non-academic nature from school visits across the state.</string>
    <string name="need_help">Need Help?</string>
    <string name="select_language_english">Please select your language</string>
    <string name="product_image">back</string>
    <string name="select_language_hindi">कृपया अपनी भाषा चुनें</string>
    <string name="please_select_forms">Choose Forms</string>
    <string name="submit_saved_forms">Submit Saved Forms</string>
    <string name="click_on_the_pdf_icon_to_download_the_pdf_report">Click on the PDF Icon to download the PDF Report</string>
    <string name="pdf_not_generated_error">The PDF report has not been generated yet. Please check again after some time.</string>
    <string name="file_download_start">File will start downloading now.</string>
    <string name="hundred_percent">100%</string>
...
