<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/change_language_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="0dp"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true"
    android:layout_marginTop="0dp"
    android:layout_marginRight="0dp"
    android:layout_marginBottom="0dp"
    android:orientation="vertical"
    android:padding="0dp">


    <RelativeLayout
        android:id="@+id/rl_confirmation_header"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_alignParentStart="true"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ttb_close_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/product_image"
            android:padding="12dp"
            android:scaleType="fitStart"
            app:srcCompat="@drawable/ic_cross" />

        <TextView
            android:id="@+id/ttb_confirmation_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/ttb_close_button"
            android:layout_marginStart="16dp"
            android:gravity="center"
            android:letterSpacing="0.10"
            android:text="@string/change_app_language_title"
            android:textColor="@color/white"
            android:textSize="20sp" />


    </RelativeLayout>


    <View
        android:id="@+id/header_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rl_confirmation_header" />


    <TextView
        android:id="@+id/please_select_language_english"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/select_language_english"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/please_select_language_hindi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_divider" />

    <TextView
        android:id="@+id/please_select_language_hindi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/select_language_hindi"
        android:textSize="20sp"
        android:layout_marginTop="6dp"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/top_divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/please_select_language_english" />

    <View
        android:id="@+id/top_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/language_hindi"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="48dp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/please_select_language_hindi" />

    <TextView
        android:id="@+id/language_hindi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/hindi"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="24dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/middle_divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_divider" />

    <ImageView
        android:id="@+id/check_hindi"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:visibility="visible"
        app:srcCompat="@drawable/ic_check"
        app:layout_constraintBottom_toTopOf="@+id/middle_divider"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="30dp"
        app:layout_constraintTop_toBottomOf="@+id/top_divider"/>

    <View
        android:id="@+id/middle_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="24dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/language_english"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/language_hindi" />


    <TextView
        android:id="@+id/language_english"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/english"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="24dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/bottom_divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/middle_divider" />

    <ImageView
        android:id="@+id/check_english"
        android:layout_width="48dp"
        android:layout_height="48dp"
        app:srcCompat="@drawable/ic_check"
        app:layout_constraintBottom_toTopOf="@+id/bottom_divider"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="30dp"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@+id/middle_divider"/>




    <View
        android:id="@+id/bottom_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/update_language"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/language_english" />


    <Button
        android:id="@+id/update_language"
        style="@style/LoginButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@color/colorPrimary"
        android:text="@string/update"
        android:layout_marginBottom="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
