...
    android:layout_marginRight="0dp"
    android:background="@color/white"
    android:layout_marginBottom="0dp"
    android:orientation="vertical"
    android:padding="0dp">

    <include layout="@layout/toolbar" />

    <include
        layout="@layout/toolbar_action_bar_shadow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar" />
...
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.9" />
        </RelativeLayout>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true" />

</RelativeLayout>
